syntax = "proto3";
package com.example.hub.grpc;

message PingRequest {
  string content = 1;
}

message PingResponse {
  string content = 1;
}

message Empty {

}

message GetNewICCResponse {
  string icc = 1;
}

message ClaimInfectionRequest {
  boolean isDummy = 1;
  string icc = 2;
  repeat string SKs = 3;
}

message QueryInfectedSKsRequest {
  i32 lastQuery = 1;
}

message QueryInfectedSKsResponse {
  repeat string SKs = 1;
}

service HubService {
  rpc ping(PingRequest) returns (PingResponse);
  rpc getNewIcc(Empty) returns (GetNewICCResponse);
  rpc claimInfection(ClaimInfectionRequest) returns (Empty);
  rpc queryInfectedSKs(QueryInfectedSKsRequest) returns (QueryInfectedSKsResponse);
}